fix: spacing between cards

--- a/style.scss
+++ b/style.scss
@@ -243,7 +243,7 @@ h6 {
     &__cards-container {
         display: flex;
         flex-wrap: wrap;
-        gap: 1em;
+        gap: 3em;
         width: 100%;
         padding: 2.5em 0;
     }
